<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_top_corner_light_white_home"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/pay_item_des_9"
        android:textColor="@color/color_black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.piceasy.tools.view.views.JustifyTextView
        android:id="@+id/popup_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:lineSpacingExtra="@dimen/dp_5"
        android:text="@string/terms_content"
        android:textColor="@color/color_dark_grey"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/agreement"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/terms_agreement"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/sp_13" />

</LinearLayout>