<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_10"
        android:src="@drawable/back_blue" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_80"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/app_name"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/splash_title"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_15" />


    </LinearLayout>


    <FrameLayout
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/background_gradient_btn">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_10"
                android:text="Sign In Google"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_18"/>

        </LinearLayout>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/agreement_check"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:theme="@style/MyCheckBox2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agree_01"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:text="@string/login_agree_02"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:text="@string/login_agree_03"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_11" />

        <TextView
            android:id="@+id/privacy_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:text="@string/login_agree_04"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_11" />

    </LinearLayout>


</FrameLayout>