<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_blue"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login">


        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hide_on_touch="true"
            app:resize_mode="fill"
            app:use_controller="false" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:src="@drawable/back_black" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/play"
            android:visibility="gone" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-10dp"
        android:background="@drawable/shape_top_corner_light_blue">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/pay_item_top">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="4dp"
                android:layout_marginStart="@dimen/sp_30"
                android:layout_marginTop="@dimen/dp_45"
                android:background="@color/color_orange" />

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="4dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/sp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:background="@color/color_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/pay_item_des_5"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/pay_item_des_6"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_16" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/pay_item_des_7"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_16" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/price_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_100"
            android:layout_marginBottom="@dimen/dp_50"
            android:overScrollMode="never" />

        <Button
            android:id="@+id/do_pay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/sp_16"
            android:layout_marginTop="@dimen/sp_16"
            android:layout_marginEnd="@dimen/sp_16"
            android:layout_marginBottom="@dimen/dp_40"
            android:background="@drawable/shape_corner_yellow"
            android:text="@string/payment_pay"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_item_des_8"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_item_des_9"
                android:textColor="@color/color_orange"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>