<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_blue"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/background_gradient_white"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:src="@drawable/back_l" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/feedback"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_16" />

        </FrameLayout>

    </FrameLayout>

    <ImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/about_us_des_5"
        android:textStyle="bold"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/sp_16"
        android:lineSpacingExtra="@dimen/dp_5"
        android:text="@string/about_us_des_4"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_14" />

</LinearLayout>